fix: Java 8 호환성 전면 수정
- pom.xml: compiler source/target 17 → 8
- SchemaServiceImpl: switch 표현식 → if-else, isBlank() → trim().isEmpty()
  익명 Comparator, 다이아몬드 연산자 명시적 타입 지정
- ExcelServiceImpl: isBlank() → trim().isEmpty()