@@ -23,7 +23,7 @@ public class SchemaServiceImpl implements SchemaService {
 
     private static final Logger log = LoggerFactory.getLogger(SchemaServiceImpl.class);
 
-    private final SchemaDao  schemaDao;
+    private final SchemaDao    schemaDao;
     private final ExportConfig config;
 
     @Autowired
@@ -38,10 +38,9 @@ public class SchemaServiceImpl implements SchemaService {
     @Override
     @Transactional(readOnly = true)
     public List<TableInfo> extractTables() {
-        String schema = config.getSchema().toUpperCase();
+        String       schema  = config.getSchema().toUpperCase();
         List<String> targets = config.getTargetTables();
 
-        // 1. 테이블 기본 정보 목록 조회
         List<TableInfo> tables = targets.isEmpty()
                 ? schemaDao.findAllTables(schema)
                 : schemaDao.findTablesByNames(schema, targets);
@@ -53,8 +52,7 @@ public class SchemaServiceImpl implements SchemaService {
 
         log.info("테이블 {}개 기본 정보 조회 완료", tables.size());
 
-        // 2. 각 테이블 컬럼/PK/인덱스 상세 정보 조회
-        List<TableInfo> result = new ArrayList<>();
+        List<TableInfo> result = new ArrayList<TableInfo>();
         for (TableInfo table : tables) {
             try {
                 TableInfo enriched = enrichTableInfo(schema, table);
@@ -76,21 +74,24 @@ public class SchemaServiceImpl implements SchemaService {
     private TableInfo enrichTableInfo(String schema, TableInfo table) {
         String tableName = table.getTableName();
 
-        // 컬럼 목록
         List<ColumnInfo> columns = schemaDao.findColumns(schema, tableName);
 
-        // PK 컬럼 Set
-        Map<String, Integer> pkMap = new LinkedHashMap<>();
-        schemaDao.findPrimaryKeyColumns(schema, tableName)
-                .forEach(pk -> pkMap.put(pk.getColumnName(), pk.getPkPosition()));
+        // PK 컬럼 Map (컬럼명 → 순번)
+        Map<String, Integer> pkMap = new LinkedHashMap<String, Integer>();
+        for (ColumnInfo pk : schemaDao.findPrimaryKeyColumns(schema, tableName)) {
+            pkMap.put(pk.getColumnName(), pk.getPkPosition());
+        }
 
         // 인덱스 컬럼 Map (컬럼명 → 인덱스명)
-        Map<String, String> indexMap = new HashMap<>();
-        schemaDao.findIndexColumns(schema, tableName)
-                .forEach(idx -> indexMap.putIfAbsent(idx.getColumnName(), idx.getIndexName()));
+        Map<String, String> indexMap = new HashMap<String, String>();
+        for (ColumnInfo idx : schemaDao.findIndexColumns(schema, tableName)) {
+            if (!indexMap.containsKey(idx.getColumnName())) {
+                indexMap.put(idx.getColumnName(), idx.getIndexName());
+            }
+        }
 
-        // 컬럼별 fullDataType 조합 + PK/인덱스 플래그 적용
-        columns.forEach(col -> {
+        // fullDataType 조합 + PK/인덱스 플래그
+        for (ColumnInfo col : columns) {
             col.setFullDataType(buildFullDataType(col));
             if (pkMap.containsKey(col.getColumnName())) {
                 col.setPrimaryKey(true);
@@ -100,45 +101,39 @@ public class SchemaServiceImpl implements SchemaService {
                 col.setIndexed(true);
                 col.setIndexName(indexMap.get(col.getColumnName()));
             }
-        });
+        }
 
-        // DDL 생성
-        String ddl = generateDdl(TableInfo.builder()
-                .schemaName(schema)
-                .tableName(tableName)
-                .tableComment(table.getTableComment())
-                .columns(columns)
-                .tablespace(table.getTablespace())
-                .build());
-
-        return TableInfo.builder()
+        TableInfo base = TableInfo.builder()
                 .schemaName(schema)
                 .tableName(tableName)
                 .tableComment(nvl(table.getTableComment()))
                 .columns(columns)
-                .ddlScript(ddl)
                 .tablespace(nvl(table.getTablespace(), config.getTablespace()))
                 .build();
+
+        String ddl = generateDdl(base);
+        base.setDdlScript(ddl);
+        return base;
     }
 
     /**
-     * 데이터 타입 + 길이/스케일 조합
+     * 데이터 타입 + 길이/스케일 조합 (Java 8 호환 if-else)
      */
     private String buildFullDataType(ColumnInfo col) {
-        String type  = col.getDataType();
+        String type  = col.getDataType().toUpperCase();
         int    len   = col.getColumnLength();
         int    scale = col.getDecimalDigits();
 
-        return switch (type.toUpperCase()) {
-            case "VARCHAR", "CHARACTER", "CHAR",
-                 "GRAPHIC", "VARGRAPHIC", "CLOB", "BLOB", "DBCLOB" ->
-                    len > 0 ? type + "(" + len + ")" : type;
-            case "DECIMAL", "NUMERIC" ->
-                    scale > 0
-                            ? type + "(" + len + "," + scale + ")"
-                            : type + "(" + len + ")";
-            default -> type;
-        };
+        if ("VARCHAR".equals(type) || "CHARACTER".equals(type) || "CHAR".equals(type)
+                || "GRAPHIC".equals(type) || "VARGRAPHIC".equals(type)
+                || "CLOB".equals(type)    || "BLOB".equals(type)
+                || "DBCLOB".equals(type)) {
+            return len > 0 ? type + "(" + len + ")" : type;
+        } else if ("DECIMAL".equals(type) || "NUMERIC".equals(type)) {
+            return scale > 0 ? type + "(" + len + "," + scale + ")" : type + "(" + len + ")";
+        } else {
+            return type;
+        }
     }
 
     /**
@@ -146,77 +141,98 @@ public class SchemaServiceImpl implements SchemaService {
      */
     @Override
     public String generateDdl(TableInfo table) {
-        StringBuilder sb  = new StringBuilder();
-        String schema     = table.getSchemaName().toUpperCase();
-        String tableName  = table.getTableName().toUpperCase();
-        String fullName   = schema + "." + tableName;
-        String ts         = nvl(table.getTablespace(), config.getTablespace());
-        List<ColumnInfo> cols = table.getColumns();
+        StringBuilder sb       = new StringBuilder();
+        String        schema   = table.getSchemaName().toUpperCase();
+        String        tblName  = table.getTableName().toUpperCase();
+        String        fullName = schema + "." + tblName;
+        String        ts       = nvl(table.getTablespace(), config.getTablespace());
+        List<ColumnInfo> cols  = table.getColumns();
 
         sb.append("-- ============================================================\n");
-        if (!table.getTableComment().isBlank()) {
+        if (!isEmpty(table.getTableComment())) {
             sb.append("-- ").append(table.getTableComment()).append("\n");
         }
         sb.append("-- TABLE : ").append(fullName).append("\n");
         sb.append("-- ============================================================\n");
         sb.append("CREATE TABLE ").append(fullName).append(" (\n");
 
-        List<String> pkCols = cols.stream()
-                .filter(ColumnInfo::isPrimaryKey)
-                .sorted(Comparator.comparingInt(ColumnInfo::getPkPosition))
-                .map(ColumnInfo::getColumnName)
-                .collect(Collectors.toList());
+        // PK 컬럼 순서 정렬
+        List<ColumnInfo> pkList = new ArrayList<ColumnInfo>();
+        for (ColumnInfo c : cols) {
+            if (c.isPrimaryKey()) pkList.add(c);
+        }
+        Collections.sort(pkList, new Comparator<ColumnInfo>() {
+            @Override
+            public int compare(ColumnInfo a, ColumnInfo b) {
+                return Integer.compare(a.getPkPosition(), b.getPkPosition());
+            }
+        });
+        List<String> pkCols = new ArrayList<String>();
+        for (ColumnInfo c : pkList) {
+            pkCols.add(c.getColumnName());
+        }
 
         boolean hasPk = config.isIncludePrimaryKey() && !pkCols.isEmpty();
 
         for (int i = 0; i < cols.size(); i++) {
-            ColumnInfo col   = cols.get(i);
+            ColumnInfo col    = cols.get(i);
             boolean    isLast = (i == cols.size() - 1) && !hasPk;
 
             sb.append("    ")
               .append(String.format("%-30s", col.getColumnName()))
               .append(String.format("%-25s", col.getFullDataType()));
 
-            if (col.getDefaultValue() != null && !col.getDefaultValue().isBlank()) {
+            if (!isEmpty(col.getDefaultValue())) {
                 sb.append("DEFAULT ").append(col.getDefaultValue()).append(" ");
             }
             sb.append(col.isNullable() ? "NULL" : "NOT NULL");
             if (!isLast) sb.append(",");
 
-            if (config.isIncludeComment() && !col.getColumnComment().isBlank()) {
+            if (config.isIncludeComment() && !isEmpty(col.getColumnComment())) {
                 sb.append("  -- ").append(col.getColumnComment());
             }
             sb.append("\n");
         }
 
         if (hasPk) {
-            sb.append("    CONSTRAINT PK_").append(tableName)
-              .append(" PRIMARY KEY (").append(String.join(", ", pkCols)).append(")\n");
+            sb.append("    CONSTRAINT PK_").append(tblName)
+              .append(" PRIMARY KEY (")
+              .append(join(pkCols, ", "))
+              .append(")\n");
         }
 
         sb.append(")");
-        if (!ts.isBlank()) sb.append("\nIN ").append(ts);
+        if (!isEmpty(ts)) sb.append("\nIN ").append(ts);
         sb.append(";\n");
 
         // COMMENT 절
         if (config.isIncludeComment()) {
-            if (!table.getTableComment().isBlank()) {
+            if (!isEmpty(table.getTableComment())) {
                 sb.append("\nCOMMENT ON TABLE ").append(fullName)
                   .append(" IS '").append(escape(table.getTableComment())).append("';\n");
             }
-            cols.stream()
-                .filter(c -> !c.getColumnComment().isBlank())
-                .forEach(c ->
+            for (ColumnInfo c : cols) {
+                if (!isEmpty(c.getColumnComment())) {
                     sb.append("COMMENT ON COLUMN ").append(fullName).append(".")
                       .append(c.getColumnName())
-                      .append(" IS '").append(escape(c.getColumnComment())).append("';\n")
-                );
+                      .append(" IS '").append(escape(c.getColumnComment())).append("';\n");
+                }
+            }
         }
         return sb.toString();
     }
 
-    // ── 유틸 ──
-    private String nvl(String val) { return val != null ? val : ""; }
-    private String nvl(String val, String def) { return (val != null && !val.isBlank()) ? val : def; }
-    private String escape(String s) { return s.replace("'", "''"); }
+    // ── 유틸 (Java 8 호환) ──
+    private boolean isEmpty(String s)              { return s == null || s.trim().isEmpty(); }
+    private String  nvl(String val)                { return val != null ? val : ""; }
+    private String  nvl(String val, String def)    { return (val != null && !val.trim().isEmpty()) ? val : def; }
+    private String  escape(String s)               { return s.replace("'", "''"); }
+    private String  join(List<String> list, String sep) {
+        StringBuilder sb = new StringBuilder();
+        for (int i = 0; i < list.size(); i++) {
+            if (i > 0) sb.append(sep);
+            sb.append(list.get(i));
+        }
+        return sb.toString();
+    }
 }
